#3490 - WP4 - Implemetation GUI for IC (server) - list of applications and detail of application - changes to based on comments in PR. fixes to errors and bugs before merge to main